IE11: fix table header misalignment. (https://github.com/woocommerce/woocommerce-admin/pull/603)

--- a/plugins/woocommerce-admin/client/components/card/style.scss
+++ b/plugins/woocommerce-admin/client/components/card/style.scss
@@ -36,6 +36,7 @@
 
 .woocommerce-card__header-item {
 	@include set-grid-item-position( 3, 3 );
+	-ms-grid-row-align: center;
 }
 
 .woocommerce-card__action,
